Fix the main-header collapsing

--- a/style.css
+++ b/style.css
@@ -216,3 +216,7 @@ h1 {
 nav {
   float: right;
 }
+
+.clear {
+  clear: both;
+}
